--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "embla-carousel-react": "^8.6.0",
     "next": "15.2.3",
+    "next-recaptcha-v3": "^1.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
