--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@fancyapps/ui": "^5.0.36",
     "embla-carousel-react": "^8.6.0",
-    "next": "15.2.3",
+    "next": "^15.3.2",
     "next-recaptcha-v3": "^1.5.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
