--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@fancyapps/ui": "^5.0.36",
+    "@vercel/blob": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "next": "^15.3.2",
     "next-recaptcha-v3": "^1.5.2",
@@ -21,8 +22,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
