--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@fancyapps/ui": "^5.0.36",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "next": "^15.3.2",
