--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fancyapps/ui": "^5.0.36",
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
+    "@vercel/speed-insights": "^1.2.0",
     "embla-carousel-react": "^8.6.0",
     "next": "^15.3.2",
     "next-recaptcha-v3": "^1.5.2",
